Fix Options page height overflow

--- a/public/options/options.css
+++ b/public/options/options.css
@@ -78,6 +78,7 @@ body {
 
 #options-container {
 	display: flex;
+	height: 100vh;
 }
 
 #menubar {
